@@ -12,13 +12,15 @@ import Location.*;
 public class Game {
     public final Hero HERO;
     private List<Location> locations;
-    private final Command cmd;
+    //private final Command cmd;
     public final int SIZE_MAP_X;
     public final int SIZE_MAP_y;
 
     public Game(int sizeMapX, int sizeMapY){
-        this.HERO = new Hero(locations.get(0),0,0);
-        this.cmd = new Command(this);
+        locations = new ArrayList<Location>();
+        locations.addFirst(createLocation(LocationName.GARDEN, sizeMapX, sizeMapY));
+        this.HERO = new Hero(locations.getFirst(),0,0);
+        //this.cmd = new Command(this);
         this.SIZE_MAP_X = sizeMapX;
         this.SIZE_MAP_y = sizeMapY;
     }
